# bot-rs

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  cliff.toml  deny.toml  recipe.json  release.toml  sqlx-data.json
.github/workflows/: release.yml  rust-audit-deny.yml  rust-ci.yml
.sqlx/: query-713cd95d42ff59350220d0386218f7759d24c9c2b79e781f8c9bff39867f9cd1.json  query-85dd2a7a8cf102d52d46668683c65d0dbf8f5230f58db8aa15867ba6ae1a6dff.json  query-97b88bdacca7dd44cc50ebc33aa4f98ef58089476e580bd895791f2ea745a533.json
bot/: Cargo.toml  release.toml  sqlx-data.json
bot/src/: commands.rs  config.rs  data.rs  handler.rs  invite.rs  main.rs  register.rs  util.rs
bot/src/commands/: invite.rs  moderation.rs
bot/src/commands/invite/: revoke.rs
migrations/: 20220801222020_invited_members.sql
