[package]
name = "pwnhub-bot"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["The PwnHub community", "Erik Tesar <erik@erik-tesar.com>"]
description = "A Discord bot for the PwnHub community Discord"
readme = "../README.md"
repository = "https://github.com/suicidesquad1337/bot-rs"
include = ["migrations/", "src/", "tests/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20", features = ["full"] }
sqlx = { version = "0.6", features = [
    "postgres",
    "chrono",
    "runtime-tokio-rustls",
    "uuid",
    "tls",
    "offline",
    "macros",
] }
figment = { version = "0.10", features = ["env", "toml"] }
secrecy = { version = "0.8", features = ["serde"] }
serde_with = "2"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
tracing = { version = "0.1" }
tracing-log = "0.1"
tracing-subscriber = { version = "0.3" }
async-trait = "0.1"

serenity = { version = "0.11", default-features = false, features = [
    "builder",
    "cache",
    "collector",
    "client",
    "gateway",
    "http",
    "model",
    "tokio_task_builder",
    "rustls_backend",
] }
poise = { version = "0.3" }
chrono = "0.4.20"
comfy-table = { version = "6", default-features = false }
futures = "0.3.21"
